--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
       let replaced = str;
       replaced = replaced.replace(/、/g, "、\n");
       replaced = replaced.replace(/。/g, "。\n");
+      replaced = replaced.replace(/(/g, "\n");
+      replaced = replaced.replace(/(/g, "");
       return replaced;
     }
 
