--- a/index.html
+++ b/index.html
@@ -182,18 +182,16 @@
       // "。" → "。\n"
       let replaced = str;
       replaced = replaced.replace(/、/g, "、\n");
-      replaced = replaced.replace(/。/g, "。\n");
-      replaced = replaced.replace(/(/g, "\n");
-      replaced = replaced.replace(/(/g, "");
+      replaced = replaced.replace(/。/g, "。\n")
       return replaced;
     }
 
     // 大吉メッセージ (全てそのまま、（）も含む)
     const daikichiMessagesRaw = [
-`助けた人が石油王で、明日の朝起きたら銀行口座に300兆円が振り込まれているかも（もちろん非課税）！`,
-`全ての食べたものがゼロカロリーになり（しかも栄養失調にはならない）一生太らないかも！`,
+`助けた人が石油王で、明日の朝起きたら銀行口座に300兆円が振り込まれているかも。もちろん非課税！`,
+`全ての食べたものがゼロカロリーになる。しかも栄養失調にはならない。一生太らないかも！`,
 `実はすべての不幸をこっそり解決する影武者がいて、あなたに残る試練は成長のためのものだけかも！`,
-`あなたブームが実は来ていて、待ち人が35億人も押し寄せてくるかも（ただしみんな奥手）！`,
+`あなたブームが実は来ていて、待ち人が35億人も押し寄せてくるかも。ただしみんな奥手！`,
 `道端でくしゃみした拍子に次元の裂け目が開いてしまい、そこから富と幸運が湧き出てくるかも！`,
 `ご近所さんがこっそりあなただけに極秘の稼ぎ方を伝授してくれて、一生働かなくても平気になるかも！`,
 `急に流行ったゲームで隠されすぎた才能が発覚、世界の脚光を浴びるかも。`,
