--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       // "。" → "。\n"
       let replaced = str;
       replaced = replaced.replace(/、/g, "、\n");
-      replaced = replaced.replace(/。/g, "。\n")
+      replaced = replaced.replace(/。/g, "。\n");
       return replaced;
     }
 
